# libchomsky3

./: .gitignore  CMakeLists.txt  README.md
cmake/: chomsky3.pc.in  chomsky3Config.cmake.in
docs/: CMakeLists.txt  Chomsky3.i  Doxyfile  Doxyfile.in  layout.xml
examples/: CMakeLists.txt  email-validation.c  jit-compilation.c  resource-limits.c  unicode-chatacter-lookup.c  url-parsing.c
include/: chomsky3.h
include/chomsky3/: ast.h  bincode.h  bytecode.h  chomsky3.h  codegen.h  codegen_c.h  compiler.h  error.h  ir.h  jit.h  optimize.h  pattern.h  regex.h  simmatch.h  vm.h
include/chomsky3/util/: debug.h  error.h  memory.h
src/: api.c
src/bincode/: deserialize.c  format.c  serialize.c
src/codegen/: codegen_bytecode.c  codegen_c.c
src/compiler/: ast.c  compiler.c  ir.c  optimize.c
src/regex/: ere.c  linter.c  parser.c  parser.g  pcre.c
src/simmatch/: simmatch_bytecode.c  simmatch_c.c
src/util/: debug.c  error.c  memory.c  unicode_names.c
src/vm/: interpreter.c  jit.c  jit_sljit.c  vm.c
tests/: CMakeLists.txt
tests/fuzz/: fuzz_grammar_actions.cpp  fuzz_jit_compilation.cpp  fuzz_parser_input.cpp  fuzz_unicode_input.cpp
tests/unit/: test_expression_grammar.cpp  test_jit_compilation.cpp  test_parser_lifecycle.cpp  test_parsing_basic.cpp  test_scope_and_speculative.cpp  test_unicode_suppot.cpp
